--- a/CSS/Aa.css
+++ b/CSS/Aa.css
@@ -1,6 +1,6 @@
 nav {
 	background: #000;
-	background: linear-gradient(#006600, #009900, #00cc00, #33ff33);
+	/* background: linear-gradient(#006600, #009900, #00cc00, #33ff33); */
 	text-align: left;
 	border-radius: 10px;
 
@@ -50,10 +50,10 @@ div.face div.facetext {
 .header
 {
 	height: 150px;
-	background: #700;
-	background: linear-gradient(#8f246b, #cc3399, #d65cad,  #e085c2);
+	background:#7C91AC;
+	/* background: linear-gradient(#8f246b, #cc3399, #d65cad,  #e085c2); */
 	font-variant: small-caps;
-	text-align: right;
+	text-align: center;
 	font-size: 25px;
 header .logo h1 {
 	background: #700;
